# ros2-vicon-receiver

./: .gitignore  README.md  install_libs.sh  install_ubuntu_bionic.sh
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
DataStreamSDK_1.12.0/: libboost_system-mt-x64.so.1.75.0  libboost_thread-mt-x64.so.1.75.0  libboost_timer-mt-x64.so.1.75.0
DataStreamSDK_10.1/: install_libs.sh  uninstall_libs.sh
DataStreamSDK_12.1/: install_libs.sh  uninstall_libs.sh
DataStreamSDK_12.1/trash/: libboost_atomic-mt-x64.so.1.75.0  libboost_container-mt-x64.so.1.75.0  libboost_contract-mt-x64.so.1.75.0  libboost_date_time-mt-x64.so.1.75.0  libboost_filesystem-mt-x64.so.1.75.0  libboost_graph-mt-x64.so.1.75.0  libboost_math_c99l-mt-x64.so.1.75.0  libboost_math_tr1-mt-x64.so.1.75.0  libboost_math_tr1f-mt-x64.so.1.75.0  libboost_prg_exec_monitor-mt-x64.so.1.75.0  libboost_random-mt-x64.so.1.75.0  libboost_regex-mt-x64.so.1.75.0  libboost_stacktrace_addr2line-mt-x64.so.1.75.0  libboost_stacktrace_basic-mt-x64.so.1.75.0  libboost_wserialization-mt-x64.so.1.75.0
vicon_msgs/: CMakeLists.txt  package.xml
vicon_msgs/msg/: Position.msg
vicon_receiver/: CMakeLists.txt  package.xml
vicon_receiver/include/vicon_receiver/: DataStreamClient.h  IDataStreamClientBase.h  communicator.hpp  publisher.hpp
vicon_receiver/launch/: client.launch.py
vicon_receiver/msg/: Position.msg
vicon_receiver/src/: communicator.cpp  publisher.cpp
vicon_receiver/src/vicon_receiver/: communicator.cpp  publisher.cpp
