<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vicon_receiver</name>
  <version>0.1.1</version>
  <description>ROS2 package to retrieve data from a Vicon system</description>
  <maintainer email="info@opt4smart.eu">OPT4SMART group</maintainer>
  <license>GNU General Public License v3</license>

  <depend>rclcpp</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
